# adventofcode

./: .gitignore  get-input.py  pyproject.toml
2022/day01/: run.py
2022/day02/: run.py
2022/day03/: run.py
2022/day04/: run.py
2022/day05/: run.py
2022/day06/: run.py
2022/day07/: run.py
2022/day08/: run.py
2022/day09/: run.py
2022/day10/: run.py
2022/day11/: run.py
2022/day12/: run.py
2023/day01/: run.py
2023/day02/: run.py
2023/day03/: run.py
2023/day04/: run.py
2023/day05/: run.py
2023/day06/: run.py
2023/day07/: run.py
2023/day08/: run.py
2023/day09/: run.py
2023/day10/: run.py
2023/day11/: run.py
2023/day12/: run.py
2024/: template.py
2024/day01/: run.py
2024/day02/: run.py
2024/day03/: run.py
