[tool.poetry]
name = "adventofcode"
description = "Advent of Code"
version = "0.2022.1"
authors = ["Olaf Conradi <olaf@conradi.org>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
black = "^22.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
